--- a/pl/Makefile
+++ b/pl/Makefile
@@ -141,7 +141,8 @@ bin/tfmx: tfmx.asm
 bin/tfmx7c: tfmx7c.s
 	$(ASM) $(INCLUDE) $(EXE) -o $@ "$<"
 bin/thx: thx.asm
-	$(ASM) $(INCLUDE) $(BINopt) -o $@ "$<"
+	# Optimization breaks this
+	$(ASM) $(INCLUDE) $(BIN) -o $@ "$<"
 bin/vss: vss.s
 	$(ASM) $(INCLUDE) $(EXE) -o $@ "$<"
 
