--- a/pl/Makefile
+++ b/pl/Makefile
@@ -1,7 +1,7 @@
 # Experimental makefile
 
-INCLUDE=-I$(HOME)/A/Asm/Include -I.. -I../Include 
-ASM=~/Prj/vbcc/bin/vasmm68k_mot
+INCLUDE=-I.. -I../Include -I./sys-include
+ASM=../temp/vasm/vasmm68k_mot
 EXE=-m68000 -no-opt -kick1hunks -Fhunkexe -ldots -nosym -DTEST=0
 EXEopt=-m68000 -kick1hunks -Fhunkexe -ldots -nosym -DTEST=0
 EXE020=-m68020 -no-opt -kick1hunks -Fhunkexe -nosym -DTEST=0
