Prep and use local Shrinkler

--- a/eagleplayers/Makefile
+++ b/eagleplayers/Makefile
@@ -1,6 +1,6 @@
 # Experimental makefile
 
-COMPRESS=shrinkler -w -p -d -9
+COMPRESS=../shrinkle.sh
 
 SOURCES=\
 	bin/activision\ pro \
@@ -82,7 +82,10 @@ COMPRESSED_TARGETS=\
 	shr/tme.shr \
 	shr/wally\ beben.shr
 
-all: $(COMPRESSED_TARGETS)
+all: shr $(COMPRESSED_TARGETS)
+
+shr:
+	mkdir -p shr
 
 clean:
 	rm -f $(COMPRESSED_TARGETS) 
