Add format "Sound Programming Language", EP by Wanted Team

--- a/eagleplayers/Makefile
+++ b/eagleplayers/Makefile
@@ -41,7 +41,8 @@ SOURCES=\
 	bin/tim\ follin\ ii \
 	bin/tme \
 	bin/wally\ beben \
-	bin/sound\ master
+	bin/sound\ master \
+	bin/soprol
 
 COMPRESSED_TARGETS=\
 	shr/activision\ pro.shr \
@@ -81,8 +82,9 @@ COMPRESSED_TARGETS=\
 	shr/tcb\ tracker.shr \
 	shr/tim\ follin\ ii.shr \
 	shr/tme.shr \
-	shr/wally\ beben.shr\
-	shr/sound\ master.shr
+	shr/wally\ beben.shr \
+	shr/sound\ master.shr \
+	shr/soprol.shr
 
 all: $(COMPRESSED_TARGETS)
 
@@ -166,4 +168,6 @@ shr/tme.shr:                      bin/tme
 shr/wally\ beben.shr:             bin/wally\ beben
 	$(COMPRESS) "$<" "$@"
 shr/sound\ master.shr:            bin/sound\ master
+	$(COMPRESS) "$<" "$@"
+shr/soprol.shr:                      bin/soprol
 	$(COMPRESS) "$<" "$@"
