Add delimidi support

--- a/eagleplayers/Makefile
+++ b/eagleplayers/Makefile
@@ -42,7 +42,8 @@ SOURCES=\
 	bin/tme \
 	bin/wally\ beben \
 	bin/sound\ master \
-	bin/soprol
+	bin/soprol \
+	bin/delimidi
 
 COMPRESSED_TARGETS=\
 	shr/activision\ pro.shr \
@@ -84,7 +85,8 @@ COMPRESSED_TARGETS=\
 	shr/tme.shr \
 	shr/wally\ beben.shr \
 	shr/sound\ master.shr \
-	shr/soprol.shr
+	shr/soprol.shr \
+	shr/delimidi.shr
 
 all: $(COMPRESSED_TARGETS)
 
@@ -170,4 +172,6 @@ shr/wally\ beben.shr:             bin/wally\ beben
 shr/sound\ master.shr:            bin/sound\ master
 	$(COMPRESS) "$<" "$@"
 shr/soprol.shr:                      bin/soprol
+	$(COMPRESS) "$<" "$@"
+shr/delimidi.shr:                      bin/delimidi
 	$(COMPRESS) "$<" "$@"
